# sw

./: pyproject.toml
shadow_writer/: README.md  blog.md
shadow_writer/src/shadow_writer/: crew.py  main.py
shadow_writer/src/shadow_writer/config/: tasks.yaml
src/shadow_writer/config/: agents.yaml
